[gd_scene load_steps=6 format=3 uid="uid://22d8wsirr1dd"]

[ext_resource type="Script" path="res://UI/object_look.gd" id="1_vbqem"]
[ext_resource type="Texture2D" uid="uid://rl0a0561d2d8" path="res://New Pixel Assets/Juniper's House/Jun Tea Poster Blue.png" id="2_y0pbs"]
[ext_resource type="Texture2D" uid="uid://pwj8f5cia20w" path="res://New Pixel Assets/Juniper's House/Jun Tour Poster.png" id="3_fr0eo"]
[ext_resource type="Texture2D" uid="uid://b7nqb1iq4ergn" path="res://GeneralScripts/interaction/Alert.png" id="4_li3pd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_l20xi"]

[node name="ObjectLook" type="CanvasLayer"]
script = ExtResource("1_vbqem")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.364706)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_l20xi")

[node name="Object front" type="TextureRect" parent="."]
offset_left = 655.0
offset_top = 116.0
offset_right = 1256.0
offset_bottom = 989.0
texture = ExtResource("2_y0pbs")

[node name="Object Back" type="TextureRect" parent="."]
offset_left = 655.0
offset_top = 116.0
offset_right = 1256.0
offset_bottom = 989.0
texture = ExtResource("3_fr0eo")

[node name="Exit" type="TextureButton" parent="."]
offset_left = 52.0
offset_top = 31.0
offset_right = 178.0
offset_bottom = 147.0
texture_normal = ExtResource("4_li3pd")

[connection signal="gui_input" from="Object front" to="." method="_on_object_front_gui_input"]
[connection signal="gui_input" from="Object Back" to="." method="_on_object_back_gui_input"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
